Update transactional mail templates.

--- a/cosmohub/api/templates/email_confirmation.html
+++ b/cosmohub/api/templates/email_confirmation.html
@@ -1,9 +1,9 @@
-Hi {{ user.name }},
+<p>Hi {{ user.name }},</p>
 
-Please open the following link to confirm your email:
+<p>Please open the following link to validate your email address:</p>
 
-{{ link }}
+<p>{{ url }}</p>
 
-Best regards,
+<p>Best regards,</p>
 
-The CosmoHub team.
+<p>The CosmoHub team.</p>
