--- a/cosmohub/api/templates/new_user.html
+++ b/cosmohub/api/templates/new_user.html
@@ -1,15 +1,13 @@
-<hr />
+<p>Hi {{ user.name }},</p>
 
-Hi <i>{{ user.name }}</i>,
+<p>Welcome to CosmoHub!</p>
 
-Welcome to <b>CosmoHub</b>!
+<p>Please open the following link to validate your email address and activate your
+account:</p>
 
-Please open the following link to activate your account:
+<p>{{ url }}</p>
 
-{{ url }}
+<p>If you did not sign up for CosmoHub, please disregard this message.</p>
 
-Best regards,
-
-The CosmoHub team.
-
-<hr />
+<p>Cheers, <br>
+The CosmoHub team.</p>
