--- a/cosmohub/api/templates/password_reset.html
+++ b/cosmohub/api/templates/password_reset.html
@@ -1,9 +1,13 @@
-Hi {{ user.name }},
+<p>Hi {{ user.name }},</p>
 
-Please open the following link to reset your password:
+<p>You’re receiving this e-mail because you requested a password reset for your
+account at CosmoHub.</p>
 
-{{ url }}
+<p>Please, open the following link in order to set up a new password:</p>
 
-Best regards,
+<p>{{ url }}</p>
 
-The CosmoHub team.
+<p>If you did not request this action, please disregard this message.</p>
+
+<p>Thanks for using CosmoHub! <br>
+The CosmoHub team.</p>
