Hide URLs in HTML email messages.

--- a/cosmohub/api/templates/query_ready.html
+++ b/cosmohub/api/templates/query_ready.html
@@ -9,9 +9,7 @@
 <li>format: {{ query.format }}</li>
 </ul>
 
-<p>It is available for download at:</p>
-
-<p>{{ url }}</p>
+<p><a href="{{ url }}">Click here</a> to proceed to download.</p>
 
 <p>Please, remember to follow the citation guide if you use any of this data in
 your research.</p>
