--- a/cosmohub/api/templates/email_confirmation.html
+++ b/cosmohub/api/templates/email_confirmation.html
@@ -1,8 +1,6 @@
 <p>Hi {{ user.name }},</p>
 
-<p>Please open the following link to validate your email address:</p>
-
-<p>{{ url }}</p>
+<p>Please <a href="{{ url }}">click here</a> to validate your email address:</p>
 
 <p>Best regards,</p>
 
