--- a/cosmohub/api/templates/new_user.html
+++ b/cosmohub/api/templates/new_user.html
@@ -2,10 +2,8 @@
 
 <p>Welcome to CosmoHub!</p>
 
-<p>Please open the following link to validate your email address and activate your
+<p>Please <a href="{{ url }}">click here</a> to validate your email address and activate your
 account:</p>
-
-<p>{{ url }}</p>
 
 <p>If you did not sign up for CosmoHub, please disregard this message.</p>
 
