--- a/cosmohub/api/templates/password_reset.html
+++ b/cosmohub/api/templates/password_reset.html
@@ -3,9 +3,7 @@
 <p>You’re receiving this e-mail because you requested a password reset for your
 account at CosmoHub.</p>
 
-<p>Please, open the following link in order to set up a new password:</p>
-
-<p>{{ url }}</p>
+<p>Please <a href="{{ url }}">click here</a> to set up a new password:</p>
 
 <p>If you did not request this action, please disregard this message.</p>
 
