--- a/cosmohub/api/templates/mail/email_confirm.html
+++ b/cosmohub/api/templates/mail/email_confirm.html
@@ -1,7 +1,11 @@
+{% extends "mail/base.html" %}
+
+{% block content %}
+
 <p>Hi {{ user.name }},</p>
 
 <p>Please <a href="{{ url }}">click here</a> to validate your email address:</p>
 
 <p>Best regards,</p>
 
-<p>The CosmoHub team.</p>
+{% endblock content %}
