--- a/cosmohub/api/templates/mail/password_reset.html
+++ b/cosmohub/api/templates/mail/password_reset.html
@@ -1,3 +1,7 @@
+{% extends "mail/base.html" %}
+
+{% block content %}
+
 <p>Hi {{ user.name }},</p>
 
 <p>You’re receiving this e-mail because you requested a password reset for your
@@ -7,5 +11,6 @@ account at CosmoHub.</p>
 
 <p>If you did not request this action, please disregard this message.</p>
 
-<p>Thanks for using CosmoHub! <br>
-The CosmoHub team.</p>
+<p>Thanks for using CosmoHub!</p>
+
+{% endblock content %}
