Add warning note about Parquet download delays.

--- a/cosmohub/api/templates/mail/query_ready.html
+++ b/cosmohub/api/templates/mail/query_ready.html
@@ -13,6 +13,8 @@
 <li>format: {{ query.format }}</li>
 </ul>
 
+<p><b>Note: </b>Parquet files may take up to 10 minutes to start downloading. Please be patient while your download starts.</p>
+
 <p><a href="{{ url }}">Click here</a> to proceed to download.</p>
 
 <p>Please, remember to follow the citation guide if you use any of this data in
